# sqltyped

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: smokeshow.yml  test.yml
scripts/: test.sh
sqltyped/: __main__.py  queries_template.py
tests/: test_main.py
